# shop

./: docker-compose.yaml  pyproject.toml
orders/: Dockerfile  main.py
orders/src/: database.py  models.py
orders/src/api/: orders.py
orders/src/repositories/: order.py
orders/src/schemas/: order.py
orders/src/services/: order.py
products/: Dockerfile  main.py
products/src/: database.py  models.py
products/src/api/: products.py
products/src/repositories/: product.py
products/src/schemas/: product.py
products/src/services/: product.py
